--- a/layout/teste.html
+++ b/layout/teste.html
@@ -15,5 +15,8 @@
     <div>
         <img src="{{qrcode}}">
     </div>
+    <div>
+        <img src="./2827001_201812221830315522.jpg">
+    </div>
 </body>
 </html>
