--- a/views/pages/teste.html
+++ b/views/pages/teste.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+    
     <div>
         <span>
             Teste Geracao HTML
             {{nome}}
         </span>
     </div>
+    
     <div>
         <img src="{{qrcode}}">
     </div>
-    <div>
-        <img src="./2827001_201812221830315522.jpg">
-    </div>
+    
 </body>
 </html>
